# PISSlang

./: .gitignore  README.md  li.py  main.py
.github/workflows/: codeql-analysis.yml
extras/: console.py
hello89129/: LICENCE  README.md  setup.cfg
hello89129/src/hello89129/: cool.py
hello89129/src/hello89129.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pisslang/: setup.cfg
