[metadata]
name = hello89129
version = 80
author = cooldude
author_email = eat@mybutt.com
description = hello dude lollololll
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cooldude/pp
project_urls =
    Bug Tracker = https://github.com/cooldude/pp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
